Updated donation box

--- a/write.html
+++ b/write.html
@@ -76,7 +76,7 @@
                                 <button type="button" class="btn btn-secondary">◈10</button>
                                 <button type="button" class="btn btn-secondary">◈50</button>
                                 <div class="input-group">
-                                  <span class="input-group-text" id="inputGroupPrepend3">Custom</span>
+                                  <span class="input-group-text" id="inputGroupPrepend3">◈</span>
                                   <input type="text" class="form-control customDonationBox" id="customDonationAmmount" aria-describedby="inputGroupPrepend3" required="">
                               </div>
                           </div>
